# algo2

./: .clang-tidy  .gitignore  CMakeLists.txt
contest_1/: Maximum_period.cpp  Maximum_repeating_substring.cpp  Prefix_function.cpp  Z_function.cpp
contest_2/: Inexact_match.cpp  Nenokku.cpp  Number_of_different_substrings.cpp  Strange_games.cpp
contest_seminars/: Smallest_common_superstring.cpp  p2z.cpp  z2p.cpp
review/: fuzzy_matching.h  tmp.cpp
